#45035 fix z-index of MD display panel

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -1137,7 +1137,7 @@ to a common CSS class?
   right: 1.1em;
   top: 1.5em;
   bottom: 0;
-  z-index: 15;
+  z-index: 100;
   .overview .gn-metadata-display {
     margin: 2em 0 0 -2em;
     dt, dd {
